Bug 357736. Use document widget for windowless plugin's reference widget whenever we can do that safely (the origin of the windowless plugin's nearest widget is equal to the origin of the document widget). Works around a regression in some cases. patch by Graham Sanderson, r+sr=roc